src/objects/Budget_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetTest__c</fullName>
        <label>BudgetTest</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <formula>IF(TEXT(Type__c) = &quot;Budget&quot;,  Amount__c , Amount__c *-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Supermarkets</fullName>
                </value>
                <value>
                    <fullName>Gasoline</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Restaurants</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Travel/ Entertainment</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Warehouse Clubs</fullName>
                </value>
                <value>
                    <fullName>Government Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Budget__c</fullName>
        <label>Monthly Budget</label>
        <referenceTo>Monthly_Budget__c</referenceTo>
        <relationshipLabel>Budget Tracking</relationshipLabel>
        <relationshipName>Budget_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Post_Date__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trans_Date__c</fullName>
        <label>Trans Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Actual</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Budget Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Trans_Date__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Description__c</columns>
        <columns>Amount__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Trans_Date__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Budget_Amount__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trans_Date__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Last Month</label>
    </listViews>
    <listViews>
        <fullName>New_Today</fullName>
        <columns>NAME</columns>
        <columns>Trans_Date__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Budget_Amount__c</columns>
        <columns>Category__c</columns>
        <columns>Monthly_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Today</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>NAME</columns>
        <columns>Trans_Date__c</columns>
        <columns>Post_Date__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Budget_Amount__c</columns>
        <columns>Category__c</columns>
        <columns>Monthly_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Trans_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <nameField>
        <displayFormat>BT-{00000}</displayFormat>
        <label>Budget Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>